import controllers.InitializerController;

class Main {
    public static void main(String[] args) {
        InitializerController initializer = new InitializerController();
        initializer.machines();
    }
}
