package models;
public class Bill extends Money {
    public Bill(double value, int quantity) {
        super(value, quantity);
    }
}
