package models;
public class Maintenance {
    String name;
    String type;

    Maintenance(String name, String type) {
        this.name = name;
        this.type = type;
    }
}
